# python

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: Makefile
{{cookiecutter.project_slug}}/: Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}_tmp/: Makefile
