[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
{%- if cookiecutter.project_type == "api" %}
description = "An {{cookiecutter.project_type.upper()}} Python Project"
{%- else %}
description = "A {{cookiecutter.project_type.upper()}} Python Project"
{%- endif %}
authors = ["FULL_NAME <EMAIL>"]
repository = "https://github.com/{{ cookiecutter.git_owner }}/{{ cookiecutter.git_repo }}"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.min_python_version }}"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
